aligned the content within the container to the top (no longer centre)

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html, body {
   padding-inline: 11vw;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   gap: 11vw;
 }
